--- a/src/components/location/Location.css
+++ b/src/components/location/Location.css
@@ -1,27 +1,43 @@
 /* LocationComponent.css */
 
 .location {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
-  }
-  
-  .map {
-    flex: 1;
-  }
-  
-  .address {
-    flex: 1;
-    margin-left: 50px;
-  }
-  
-  .address h3 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-  }
-  
-  .address p {
-    font-size: 1.2rem;
-    margin: 0;
-  }
-  
+  display: flex;
+  flex-direction: column; /* Change to column layout for small screens */
+  margin-top: 50px;
+}
+
+.map {
+  flex: 1;
+  margin-bottom: 20px; /* Add margin for separation on small screens */
+}
+
+.address {
+  flex: 1;
+  margin-left: 0; /* Reset margin for small screens */
+}
+
+.address h3 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.address p {
+  font-size: 1.2rem;
+  margin: 0;
+}
+
+/* Media queries for responsiveness */
+
+@media screen and (min-width: 768px) {
+.location {
+  flex-direction: row; /* Revert to row layout for larger screens */
+}
+
+.map {
+  margin-bottom: 0; /* Reset margin for larger screens */
+}
+
+.address {
+  margin-left: 50px; /* Add margin between map and address for larger screens */
+}
+}
