--- a/src/components/programs/Programs.css
+++ b/src/components/programs/Programs.css
@@ -1,31 +1,65 @@
 /* ProgramsComponent.css */
 
 .programs {
-    margin-top: 50px;
-    margin-left: 20px;
+  margin-top: 50px;
+  margin-left: 20px;
+}
+
+.program {
+  margin-bottom: 30px;
+}
+
+.program h3 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.program p {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+.program a {
+  font-size: 1.2rem;
+  color: #007bff;
+  text-decoration: none;
+}
+
+.program a:hover {
+  text-decoration: underline;
+}
+
+/* Media queries for responsiveness */
+@media screen and (max-width: 768px) {
+  .programs {
+      margin-left: 10px; /* Adjust margin-left for smaller screens */
   }
-  
+
   .program {
-    margin-bottom: 30px;
+      margin-bottom: 20px; /* Reduce bottom margin on small screens */
   }
-  
+
   .program h3 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
+      font-size: 1.3rem; /* Decrease font size of headings on small screens */
   }
-  
-  .program p {
-    font-size: 1.2rem;
-    margin-bottom: 10px;
-  }
-  
+
+  .program p,
   .program a {
-    font-size: 1.2rem;
-    color: #007bff;
-    text-decoration: none;
+      font-size: 1rem; /* Decrease font size of paragraphs and links on small screens */
   }
-  
-  .program a:hover {
-    text-decoration: underline;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  /* Adjust styles for medium-sized screens */
+  .programs {
+      margin-top: 40px; /* Adjust margin-top for medium-sized screens */
   }
-  
+}
+
+/* Media query for large screens */
+@media screen and (min-width: 1024px) {
+  /* Adjust styles for large-sized screens */
+  .programs {
+      margin-top: 60px; /* Adjust margin-top for large-sized screens */
+  }
+}
